learn to compile with websocket support

--- a/docs/history.txt
+++ b/docs/history.txt
@@ -1,4 +1,25 @@
-2016/04/01 meet and get device
-2016/04/04 received UI image file: imgpsh_fullsize.png
-2016/04/08 sent new icon images:add-comment, color-code, sympton-icons 每次测量后可以加备注说明身体状况,选择状况图标
+
+2016/04/25 look mosquitto configer, try to open webcoket
+    Websockets support is currently disabled by default at compile time.
+    to enable, need to get source package and compile with
+        http://mosquitto.org/download/
+        WITH_WEBSOCKETS:=yes in config.mk
+    when run make to build, also need to install dependent packages, like:
+        sudo apt-get install libssl-dev
+        sudo apt-get install libc-ares-dev
+        sudo apt-get install libwebsockets-dev
+        sudo apt-get install uuid-dev
+    then, config websocket as:
+        listener 1884 127.0.0.1
+        protocol websockets
+    websocket test site:
+        http://www.eclipse.org/paho/clients/js/utility/index.html
+
 2016/04/11 received 蓝牙血压计通讯协议.doc
+
+2016/04/08 sent new icon images:add-comment, color-code, sympton-icons 每次测量后可以加备注说明身体状况,选择状况图标
+
+2016/04/04 received UI image file: imgpsh_fullsize.png
+
+2016/04/01 meet and get device
+
